...
<!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_test_crash" tools:ignore="MissingTranslation">Test crash</string>
    <string name="description_test_crash" tools:ignore="MissingTranslation">Using Crash.generateTestCrash() API</string>
    <string name="title_crash_divide_by_0" tools:ignore="MissingTranslation">Divide by 0</string>
    <string name="description_crash_divide_by_0" tools:ignore="MissingTranslation">Divide by 0</string>
    <string name="title_test_ui_crash" tools:ignore="MissingTranslation">Test some UI crash</string>
    <string name="description_test_ui_crash" tools:ignore="MissingTranslation">A UI coding mistake, has inner exception</string>
    <string name="title_nested_exception_crash" tools:ignore="MissingTranslation">Crash with an inner exception</string>
    <string name="description_nested_exception_crash" tools:ignore="MissingTranslation">An exception with a single cause</string>
    <string name="title_deeply_nested_exception_crash" tools:ignore="MissingTranslation">A exception with plenty of causes</string>
    <string name="description_deeply_nested_exception_crash" tools:ignore="MissingTranslation">The exception that caused the exception that caused the exception that caused the exception…</string>
    <string name="title_stack_overflow_crash" tools:ignore="MissingTranslation">Stack overflow crash</string>
    <string name="description_stack_overflow_crash" tools:ignore="MissingTranslation">Caused by infinite recursion</string>
    <string name="title_memory_crash" tools:ignore="MissingTranslation">Out of memory crash</string>
    <string name="description_memory_crash" tools:ignore="MissingTranslation">Allocating a huge array</string>
    <string name="title_memory_crash2" tools:ignore="MissingTranslation">Out of memory crash 2</string>
    <string name="description_memory_crash2" tools:ignore="MissingTranslation">Allocating a huge string builder in another class</string>
    <string name="title_variable_message" tools:ignore="MissingTranslation">Crash with a variable message</string>
    <string name="description_variable_message" tools:ignore="MissingTranslation">Reading a non existing resource with random id</string>
    <string name="title_variable_message2" tools:ignore="MissingTranslation">Crash with a variable message in another activity</string>
    <string name="description_variable_message2" tools:ignore="MissingTranslation">Same bug but in another class</string>
    <string name="title_super_not_called_exception" tools:ignore="MissingTranslation">SuperNotCalledException</string>
    <string name="description_super_not_called_exception" tools:ignore="MissingTranslation">Not calling super method in onPause()</string>
    <string name="title_super_not_called_exception2" tools:ignore="MissingTranslation">SuperNotCalledException 2</string>
...
    <string name="title_low_memory_warning" tools:ignore="MissingTranslation">Low memory warning</string>
    <string name="description_low_memory_warning" tools:ignore="MissingTranslation">Generate low memory warning/crash</string>
    <string name="crash_confirmation_dialog_title" tools:ignore="MissingTranslation">Unexpected crash found</string>
    <string name="crash_confirmation_dialog_message" tools:ignore="MissingTranslation">Would you like to send an anonymous report so we can fix the problem?</string>
    <string name="crash_confirmation_dialog_not_send_button" tools:ignore="MissingTranslation">Don\'t Send</string>
    <string name="crash_confirmation_dialog_always_send_button" tools:ignore="MissingTranslation">Always Send</string>
    <string name="crash_confirmation_dialog_send_button" tools:ignore="MissingTranslation">Send</string>
    <string name="crash_before_sending" tools:ignore="MissingTranslation">Sending Crash reports.</string>
    <string name="crash_sent_succeeded" tools:ignore="MissingTranslation">Crash reports delivered successfully.</string>
    <string name="crash_sent_failed" tools:ignore="MissingTranslation">Failed to deliver Crash reports.</string>
    <string name="event_before_sending" tools:ignore="MissingTranslation">Sending Event.</string>
    <string name="event_sent_succeeded" tools:ignore="MissingTranslation">Event delivered successfully.</string>
    <string name="event_sent_failed" tools:ignore="MissingTranslation">Failed to deliver Event.</string>
    <string name="page_before_sending" tools:ignore="MissingTranslation">Sending Page.</string>
    <string name="page_sent_succeeded" tools:ignore="MissingTranslation">Page delivered successfully.</string>
    <string name="page_sent_failed" tools:ignore="MissingTranslation">Failed to deliver Page.</string>
...
