...

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Sasquatch</string>
    <string name="sdk_source_format" tools:ignore="MissingTranslation">SDK source: %s</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="add" tools:ignore="MissingTranslation">Add</string>
    <string name="title_crashes" tools:ignore="MissingTranslation">Crashes</string>
    <string name="description_crashes" tools:ignore="MissingTranslation">Test crashes</string>
    <string name="title_auth" tools:ignore="MissingTranslation">User Authentication</string>
    <string name="description_auth" tools:ignore="MissingTranslation">Associate telemetry with user information</string>
    <string name="title_device_info" tools:ignore="MissingTranslation">Device info</string>
    <string name="description_device_info" tools:ignore="MissingTranslation">Display device information</string>
    <string name="title_check_for_update" tools:ignore="MissingTranslation">Check for Update</string>
    <string name="description_check_for_update" tools:ignore="MissingTranslation">Checks for new Distribute releases</string>
...
